# cmdpiped

./: Cargo.toml  README.md  script.sh
.github/workflows/: ci.yml  release.yml
examples/monitor/: README.md  server.sh
examples/monitor/public/: index.html
examples/server-chat/: server.js
examples/server-chat/public/: index.html
public/: index.html
src/: broadcaster.rs  command.rs  main.rs
