[package]
name = "cmdpiped"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features =["process", "io-std"] }
futures = "0.3"
tokio-process-stream = "0.3.0"
actix-files = "0.6.2"
clap = { version = "3", features = ["derive"] }
actix-ws = "0.2.0"
log = "0.4"
env_logger = "0.9"
